--- a/Othello/Othello/MainWindow.xaml
+++ b/Othello/Othello/MainWindow.xaml
@@ -6,6 +6,6 @@
         xmlns:local="clr-namespace:Othello"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
-    <Grid x:Name="plate" Background="Green">
+    <Grid x:Name="plate" Background="SaddleBrown">
     </Grid>
 </Window>
