--- a/Othello/Othello/MainWindow.xaml
+++ b/Othello/Othello/MainWindow.xaml
@@ -6,6 +6,5 @@
         xmlns:local="clr-namespace:Othello"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
-    <Grid x:Name="plate" Background="SaddleBrown">
-    </Grid>
+    <Grid x:Name="plate" Background="SaddleBrown"/>
 </Window>
