--- a/Othello/Othello/MainWindow.xaml
+++ b/Othello/Othello/MainWindow.xaml
@@ -1,10 +1,47 @@
-﻿<Window x:Class="Othello.MainWindow"
+﻿<Window 
+        x:Class="Othello.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Othello"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525" KeyDown="Window_KeyDown">
-    <Grid x:Name="plate" Background="SaddleBrown"/>
+        Title="MainWindow" Height="600" Width="800.0" KeyDown="Window_KeyDown">
+    <Grid x:Name="container"  Background="White">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*">
+            </ColumnDefinition>
+            <ColumnDefinition Width="Auto">
+            </ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
+        <Grid x:Name="plate" Grid.Column="0"  Background="SaddleBrown" 
+              Height="{Binding ActualHeight, ElementName=container}" Width="{Binding ActualHeight, ElementName=plate}" />
+        <StackPanel x:Name="UIContainer" Grid.Column="1"  HorizontalAlignment="Right" Width="200">
+            <TextBox x:Name="ScoreTBox" Height="33" TextWrapping="Wrap" Text="Score" TextAlignment="Center" FontWeight="Bold" FontFamily="Consolas" FontSize="26.667"/>
+            <Grid x:Name="Scores" Height="100">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*">
+                    </ColumnDefinition>
+                    <ColumnDefinition Width="1*">
+                    </ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="20"></RowDefinition>
+                    <RowDefinition Height="1*"></RowDefinition>
+                    <RowDefinition Height="1*"></RowDefinition>
+                </Grid.RowDefinitions>
+                <Border Grid.Column="1" Grid.RowSpan="4" BorderBrush="Black" 
+                BorderThickness="1,0,0,0" Background="{x:Null}" />
+                <TextBox Grid.Column="0" Grid.Row="0"  x:Name="WhiteTBox" Width="100" Text="White" Height="26" TextAlignment="Center"/>
+                <TextBox Grid.Column="1" Grid.Row="0"  x:Name="BlackTBox" Text="Black" TextAlignment="Center" Height="26" Width="100"/>
+                <TextBox Grid.Column="0" Grid.Row="1" x:Name="tbxWhiteScore" TextWrapping="Wrap"/>
+                <TextBox Grid.Column="1" Grid.Row="1" x:Name="tbxBlackScore" TextWrapping="Wrap"/>
+                <TextBox Grid.Column="0" Grid.Row="2" x:Name="tbxWhiteTimer" TextWrapping="Wrap"/>
+                <TextBox Grid.Column="1" Grid.Row="2" x:Name="tbxBlackTimer" TextWrapping="Wrap"/>
+            </Grid>
+            <Button x:Name="btnRestart" Content="Restart" MouseDown="RPressed" />
+            <Button x:Name="btnQuit" Content="Restart" MouseDown="EscPressed" />
+        </StackPanel>
+    </Grid>
 </Window>
