--- a/Othello/Othello/MainWindow.xaml
+++ b/Othello/Othello/MainWindow.xaml
@@ -42,7 +42,14 @@
             </Grid>
             <Button x:Name="btnRestart" Content="Restart" MouseDown="RPressed" />
             <Button x:Name="btnQuit" Content="Quit" MouseDown="EscPressed" />
-            <Image x:Name="imgTurn" Source="{Binding TurnImage}" />
+            <Rectangle Name="imgTurn" Fill="Beige" HorizontalAlignment="Left"
+                   Height="100" 
+                   Width="150"
+                   RadiusY="13.5" RadiusX="13.5">
+                
+            </Rectangle>
+
+            
         </StackPanel>
     </Grid>
 </Window>
