--- a/Othello/Othello/MainWindow.xaml
+++ b/Othello/Othello/MainWindow.xaml
@@ -43,10 +43,8 @@
             <Button x:Name="btnRestart" Content="Restart" MouseDown="RPressed" />
             <Button x:Name="btnQuit" Content="Quit" MouseDown="EscPressed" />
             <Rectangle Name="imgTurn" Fill="Beige" HorizontalAlignment="Left"
-                   Height="100" 
-                   Width="150"
-                   RadiusY="13.5" RadiusX="13.5">
-                
+                   Height="200" 
+                   Width="200"     >
             </Rectangle>
 
             
